fixed the redis cache issue for analytcis service