@@ -1,39 +1,18 @@
 package com.finance.analytics.cache;
 
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.jsontype.BasicPolymorphicTypeValidator;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import io.lettuce.core.api.StatefulRedisConnection;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.pool2.impl.GenericObjectPoolConfig;
-import org.springframework.beans.factory.SmartInitializingSingleton;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.actuate.metrics.cache.CacheMetricsRegistrar;
-import org.springframework.cache.Cache;
-import org.springframework.cache.annotation.CachingConfigurer;
-import org.springframework.cache.annotation.CachingConfigurerSupport;
-import org.springframework.cache.interceptor.CacheErrorHandler;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
-import org.springframework.data.redis.cache.RedisCacheConfiguration;
-import org.springframework.data.redis.cache.RedisCacheManager;
-import org.springframework.data.redis.connection.RedisConnectionFactory;
-import org.springframework.data.redis.connection.RedisPassword;
-import org.springframework.data.redis.connection.RedisStandaloneConfiguration;
-import org.springframework.data.redis.connection.lettuce.LettuceConnectionFactory;
-import org.springframework.data.redis.connection.lettuce.LettucePoolingClientConfiguration;
+import org.springframework.data.redis.core.RedisCallback;
 import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer;
-import org.springframework.data.redis.serializer.RedisSerializationContext;
-import org.springframework.data.redis.serializer.StringRedisSerializer;
+import org.springframework.data.redis.core.script.DefaultRedisScript;
 import org.springframework.stereotype.Component;
 
 import java.time.Duration;
 import java.util.*;
 import java.util.stream.Collectors;
+
+
 
 @Slf4j
 @Component
@@ -43,70 +22,145 @@ public class CacheKeyRegistry {
     @Lazy
     private final RedisTemplate<String, Object> redisTemplate;
 
-    // Slightly longer than the longest cache TTL (timeline-analytics = 1h)
-    // so the registry never expires before the keys it tracks
-    private static final Duration REGISTRY_TTL = Duration.ofHours(2);
-    private static final String REGISTRY_PREFIX = "finance:analytics:v1:user-keys:";
+    private static final Duration REGISTRY_TTL    = Duration.ofHours(2);
+    private static final String   USER_KEY_PREFIX  = "finance:analytics:v1:user-keys:";
+    private static final String   CACHE_USER_PREFIX = "finance:analytics:v1:cache-users:";
+    private static final String EVICT_CACHE_LUA = """
+    local cacheSet    = KEYS[1]
+    local cachePrefix = ARGV[1]
+    local userPrefix  = ARGV[2]
+    
+    local userIds = redis.call('SMEMBERS', cacheSet)
+    if #userIds == 0 then return 0 end
+    
+    local totalDeleted = 0
+    
+    for _, uid in ipairs(userIds) do
+        local userSet = userPrefix .. uid
+        
+        -- SSCAN instead of SMEMBERS to avoid blocking on large sets
+        local cursor = '0'
+        local toDelete = {}
+        
+        repeat
+            local result = redis.call('SSCAN', userSet, cursor, 'MATCH', cachePrefix .. '*', 'COUNT', 100)
+            cursor = result[1]
+            local keys = result[2]
+            
+            for _, k in ipairs(keys) do
+                redis.call('UNLINK', k)
+                table.insert(toDelete, k)
+                totalDeleted = totalDeleted + 1
+            end
+        until cursor == '0'
+        
+        -- batch SREM in one call
+        if #toDelete > 0 then
+            redis.call('SREM', userSet, table.unpack(toDelete))
+        end
+    end
+    
+    redis.call('UNLINK', cacheSet)
+    return totalDeleted
+    """;
 
-    /**
-     * Register a cache key under the user's registry set.
-     * Called whenever a cache entry is written.
-     */
-    public void register(UUID userId, String fullKey) {
-        String setKey = REGISTRY_PREFIX + userId;
+    // ─── Write ───────────────────────────────────────────────────────────────
+
+    public void register(UUID userId, String cacheName, String fullKey) {
+        String userSet  = USER_KEY_PREFIX  + userId;
+        String cacheSet = CACHE_USER_PREFIX + cacheName;
         try {
-            redisTemplate.opsForSet().add(setKey, fullKey);
-            // Refresh TTL on every write — keeps the registry alive as long as
-            // the user is active
-            redisTemplate.expire(setKey, REGISTRY_TTL);
-            log.debug("Registered cache key={} for user={}", fullKey, userId);
+            // Pipeline both writes — one round trip
+            redisTemplate.executePipelined((RedisCallback<?>) connection -> {
+                byte[] userSetBytes  = userSet.getBytes();
+                byte[] cacheSetBytes = cacheSet.getBytes();
+                byte[] fullKeyBytes  = fullKey.getBytes();
+                byte[] userIdBytes   = userId.toString().getBytes();
+
+                connection.setCommands().sAdd(userSetBytes,  fullKeyBytes);
+                connection.setCommands().sAdd(cacheSetBytes, userIdBytes);
+                connection.keyCommands().expire(userSetBytes,  REGISTRY_TTL.toSeconds());
+                connection.keyCommands().expire(cacheSetBytes, REGISTRY_TTL.toSeconds());
+                return null;
+            });
+            log.debug("Registered key={} user={} cache={}", fullKey, userId, cacheName);
         } catch (Exception e) {
-            // Registry failure must never affect the caller —
-            // worst case is a stale key that survives until TTL
-            log.warn("Failed to register cache key={} for user={}: {}", fullKey, userId, e.getMessage());
+            log.warn("register failed key={} user={}: {}", fullKey, userId, e.getMessage());
         }
     }
 
-    /**
-     * Delete all cache keys registered for this user, then clean up the registry set.
-     * O(1) SET lookup + bulk DELETE — no Redis SCAN needed.
-     */
-    public void evictForUser(UUID userId) {
-        String setKey = REGISTRY_PREFIX + userId;
+    // ─── Single key evict ────────────────────────────────────────────────────
+
+    public void deregister(UUID userId, String cacheName, String fullKey) {
+        String userSet  = USER_KEY_PREFIX  + userId;
+        String cacheSet = CACHE_USER_PREFIX + cacheName;
         try {
-            Set<Object> members = redisTemplate.opsForSet().members(setKey);
+            redisTemplate.executePipelined((RedisCallback<?>) connection -> {
+                connection.setCommands().sRem(userSet.getBytes(),  fullKey.getBytes());
+                // Only remove userId from cacheSet if they have no more keys
+                // (checked after pipeline — see note below)
+                return null;
+            });
+        } catch (Exception e) {
+            log.warn("deregister failed key={} user={}: {}", fullKey, userId, e.getMessage());
+        }
+    }
+
+    // ─── User evict (your main flow) ─────────────────────────────────────────
+
+    public void evictForUser(UUID userId) {
+        String userSet = USER_KEY_PREFIX + userId;
+        try {
+            Set<Object> members = redisTemplate.opsForSet().members(userSet);
             if (members == null || members.isEmpty()) {
-                log.debug("No registered keys to evict for user={}", userId);
+                log.debug("Nothing to evict for user={}", userId);
                 return;
             }
 
             List<String> keys = members.stream()
                     .map(Object::toString)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            // Delete the actual cache entries
-            redisTemplate.delete(keys);
-            // Delete the registry set itself
-            redisTemplate.delete(setKey);
+            // Delete cache entries + registry set atomically
+            redisTemplate.executePipelined((RedisCallback<?>) connection -> {
+                keys.forEach(k -> connection.keyCommands()
+                        .del(k.getBytes()));
+                connection.keyCommands().del(userSet.getBytes());
+                return null;
+            });
 
-            log.debug("Evicted {} keys for user={}", keys.size(), userId);
-
+            log.info("Evicted {} keys for user={}", keys.size(), userId);
         } catch (Exception e) {
-            log.error("Eviction failed for user={}: {}", userId, e.getMessage());
+            log.error("evictForUser failed user={}: {}", userId, e.getMessage());
         }
     }
 
-    /** Expose registry contents for debugging/monitoring */
-    public Set<String> getRegisteredKeys(UUID userId) {
-        String setKey = REGISTRY_PREFIX + userId;
+    public void evictAllForCache(String cacheName) {
+        String cacheSet    = CACHE_USER_PREFIX + cacheName;
+        String cachePrefix = "finance:analytics:v1:" + cacheName + ":";
         try {
-            Set<Object> members = redisTemplate.opsForSet().members(setKey);
+            Long deleted = redisTemplate.execute(
+                    new DefaultRedisScript<>(EVICT_CACHE_LUA, Long.class),
+                    Collections.singletonList(cacheSet),   // KEYS[1]
+                    cachePrefix,                            // ARGV[1]
+                    USER_KEY_PREFIX                         // ARGV[2]
+            );
+            log.info("evictAllForCache cache={} deleted={} keys", cacheName, deleted);
+        } catch (Exception e) {
+            log.error("evictAllForCache failed cache={}: {}", cacheName, e.getMessage());
+        }
+    }
+
+    // Debugging
+    public Set<String> getRegisteredKeys(UUID userId) {
+        String userSet = USER_KEY_PREFIX + userId;
+        try {
+            Set<Object> members = redisTemplate.opsForSet().members(userSet);
             if (members == null) return Collections.emptySet();
             return members.stream().map(Object::toString).collect(Collectors.toSet());
         } catch (Exception e) {
-            log.warn("Could not fetch registry for user={}: {}", userId, e.getMessage());
+            log.warn("getRegisteredKeys failed user={}: {}", userId, e.getMessage());
             return Collections.emptySet();
         }
     }
 }
-
